# topgo-backend

./: Cargo.toml  Dockerfile  Dockerfile_cron  `  diesel.toml  docker-compose.yml  init-letsencrypt.sh  mig.sql
cron/: .entrypoint.sh.swp  Dockerfile  entrypoint.sh  run_day.sh
data/certbot/conf/accounts/acme-staging-v02.api.letsencrypt.org/directory/39305b87b69f41ec6bbd7378c85164d5/: meta.json  private_key.json  regr.json
data/certbot/conf/accounts/acme-staging-v02.api.letsencrypt.org/directory/890ba6b6ed5125ffcecd94c7a214073a/: meta.json  private_key.json  regr.json
data/certbot/conf/accounts/acme-v02.api.letsencrypt.org/directory/9a120c072b7d1fa5a79c8b5e670068f1/: meta.json  private_key.json  regr.json
data/certbot/conf/archive/redrufus.art/: cert1.pem  fullchain1.pem  privkey1.pem
data/certbot/conf/csr/: 0008_csr-certbot.pem  0009_csr-certbot.pem  0010_csr-certbot.pem  0011_csr-certbot.pem
data/certbot/conf/keys/: 0008_key-certbot.pem  0009_key-certbot.pem  0010_key-certbot.pem
data/certbot/conf/renewal/: redrufus.art.conf
data/nginx/: app.conf
data/nginx_dev/: app.conf
src/: enum_types.rs  form.rs  lib.rs  main.rs  schema.rs
src/events/: db.rs  routes.rs
src/ordering/: .db.rs.swp  db.rs  routes.rs
src/paintings/: db.rs  routes.rs
src/payments/: db.rs  routes.rs
src/reports/: db.rs  routes.rs
src/temp/: db.rs  routes.rs
src/users/: db.rs  mod.rs  routes.rs
src/users/db/: admins.rs  couriers.rs  curators.rs  mod.rs  restaurants.rs
summary/: test.xlsx
