[package]
name = "topgo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix_web_dev = {git = "https://github.com/Engine-studio/actix-web-dev-tools"}
actix-web = "3"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono", "uuid","serde_json"] }
env_logger = "0.8.3"
dotenv = "0.15.0"
futures-util = "0.3.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10.10", features = ["json"] }
tokio-compat-02 = "0.2.0"
chrono = { version = "0.4.10", features = ["serde"] }
actix-service = "1.0.6"
futures = "0.3.1"
diesel_migrations = "1.4.0"
rand = "0.8.3"
actix-http = "2.2.0"
r2d2 = "0.8.9"
ring = "0.16.20"
data-encoding = "2.3.2"
diesel-derive-enum = { version = "1", features = ["postgres"] }
lettre = { version = "0.10.0-alpha.2", features = ["builder"] }
r2d2_redis = "0.14.0"
xlsxwriter = "0.3.1"
uuid ={ version = "0.8.2", features = ["v4"] }
